Hanlding the deployment of jovanlang and getting it within the regular site flow, added markdown and converted all the project content to now use markdown so it's more readable and formatable long term, fixed a bug with unorder list of elements in css, and had to update the footers css because of it

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -266,12 +266,6 @@ footer > section > div {
   margin: 0px 10px;
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 #copyright {
   position: absolute;
   bottom: 10px;
